# TACVL

./: .gitignore  .gitmodules  README.md  canny_test_image.cpp  tips.txt
Basic/: CMakeLists.txt  show_image.cpp
Feature/: CMakeLists.txt  canny_test_image.cpp
basic/: CMakeLists.txt  formatting.cpp  nan_inf.cpp  read_image_sequence.cpp  show_image.cpp  stream_and_save_video.cpp  stream_video.cpp  txt_IO.cpp
camera/: CMakeLists.txt  kannala_brandt_tershire.cpp  kannala_brandt_unproject.cpp  undistort.cpp
cmake/: FindCSparse.cmake
eigen_sophus/: CMakeLists.txt  tutorial.cpp
feature/: CMakeLists.txt  blob_stream.cpp  canny_edge_image.cpp  canny_edge_stream.cpp  canny_stream.cpp  distribute_keypoints_octree.cpp  extract_ORB_octree.cpp  orb_1to2.cpp  sift_1to2.cpp  test_detection_image.cpp  test_detection_stream.cpp
feature/include/: orb_extractor.h
feature/src/: CMakeLists.txt  orb_extractor.cpp
include/: calibration.h  common_include.h
intel_realsense/: CMakeLists.txt  camera_properties.cpp  depth_map_stream.cpp  grabcut.cpp
marker/: CMakeLists.txt  qr_localize.cpp  qr_stream.cpp
marker/qr/: CMakeLists.txt  qr_stream.cpp  qr_wechat.cpp
processing/: CMakeLists.txt  canny_image.cpp  canny_stream.cpp  color_detection_stream.cpp  ellipse_image.cpp  ellipse_stream.cpp  ellipse_trackbar.cpp  hough_line_stream.cpp  otsu_stream.cpp
processing/binarization/: CMakeLists.txt  otsu_image.cpp  otsu_stream.cpp
processing/color/: CMakeLists.txt  color_detection_stream.cpp
processing/connected_components/: CMakeLists.txt  connected_components.cpp
processing/contour/: CMakeLists.txt  canny_trackbar.cpp  canny_trackbar_on_gray.cpp  ellipse_stream.cpp  ellipse_trackbar.cpp  hough_line_stream.cpp  quadrilateral_detector.cpp
processing/contour/tutorial/: CMakeLists.txt  tutorial_contour.cpp
processing/contrast/: CMakeLists.txt  clahe_stream.cpp
processing/mask/: CMakeLists.txt  circular_mask.cpp
recognition/: CMakeLists.txt
recognition/object_detection/: CMakeLists.txt  yolo_cv_stream.cpp
structure_from_motion/: CMakeLists.txt  pose_viewer.cpp  triangulate_kannala_brandt.cpp
structure_from_motion/triangulation/: CMakeLists.txt
studio/: CMakeLists.txt  otsu_canny_stream.cpp
studio/ionmav/: 2023-08-07_14-43-45-decide_when_to_release_01.prof  CMakeLists.txt  decide_when_to_release.cpp
threading/: CMakeLists.txt  basic_threading.cpp
tool/: CMakeLists.txt  color_picker_BGR_to_HSV.cpp  color_picker_BGR_trackbar.cpp  color_picker_HSV_to_BGR.cpp  read_numerics_from_txt.cpp
tool/data/: 123.txt  times.txt
tracking/: CMakeLists.txt  optical_flow.cpp  optical_flow_pyramid.cpp  track.cpp
tracking/include/: orb_extractor.h
tracking/src/: CMakeLists.txt
visualization/: CMakeLists.txt
visualization/pangolin/: CMakeLists.txt  multi_display_plot.cpp  plot_data_monitor.cpp
